--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>🌱 Green Meter - Secured</title>
+    <title>🌱 Green Meter 🌱</title>
     <style>
         :root {
             --glass-bg: rgba(15, 23, 42, 0.85);
@@ -494,4 +494,5 @@
     }
 </script>
 </body>
+
 </html>
