--- a/index.html
+++ b/index.html
@@ -355,12 +355,12 @@
                 <div class="expand-container" id="breakdownArea">
                     <div class="expand-inner">
                         <div class="breakdown-grid">
-                            <div class="breakdown-item"><span>🏍️ Motobike</span> <b id="bd-moto">0.00</b></div>
-                            <div class="breakdown-item"><span>🚗 Car/Taxi</span> <b id="bd-car">0.00</b></div>
-                            <div class="breakdown-item"><span>❄️ AC Usage</span> <b id="bd-ac">0.00</b></div>
-                            <div class="breakdown-item"><span>🥩 Beef Meals</span> <b id="bd-beef">0.00</b></div>
-                            <div class="breakdown-item"><span>🥤 Plastic</span> <b id="bd-plastic">0.00</b></div>
-                            <div class="breakdown-item"><span>📦 Delivery</span> <b id="bd-delivery">0.00</b></div>
+                            <div class="breakdown-item"><span>🏍️</span> <b id="bd-moto">0.00</b></div>
+                            <div class="breakdown-item"><span>🚗</span> <b id="bd-car">0.00</b></div>
+                            <div class="breakdown-item"><span>❄️</span> <b id="bd-ac">0.00</b></div>
+                            <div class="breakdown-item"><span>🥩</span> <b id="bd-beef">0.00</b></div>
+                            <div class="breakdown-item"><span>🥤</span> <b id="bd-plastic">0.00</b></div>
+                            <div class="breakdown-item"><span>📦</span> <b id="bd-delivery">0.00</b></div>
                         </div>
                     </div>
                 </div>
